# bittorrent-client-rs

./: Cargo.toml
fixtures/: Fedora-SoaS-Live-x86_64-39.torrent  debian-12.5.0-armel-netinst.iso.torrent
src/: main.rs  tmp
src/bencode/: meta_info.rs  mod.rs  nom.rs  plain.rs
src/download/: bitfield.rs  handshake.rs  mod.rs  peer_msg.rs
src/file/: mod.rs
src/tracker/: http.rs  mod.rs  peers.rs  udp.rs
