[package]
name = "bittorrent"
version = "0.1.0"
authors = ["Jojito"]
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["derive"]}
nom = "7.1.3"
anyhow = "1.0.79"
bytes = "1.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_bencode = "0.2.3"                              
serde_bytes = "0.11.12"                             
serde_json = "1.0.105"                             
sha1 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "trust-dns"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
url = "2.5.0"
byteorder = "1.5.0"
futures = "0.3.30"
